# mcp_server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_GUIDE.md  Dockerfile  LICENSE  PRfix.md  README.md  README_DOCKER.md  TypeScript-Migration-Plan.md  VERSION_INCREMENT.md  build.js  build.sh  clippy.toml  docker-compose.yml  esbuild.config.js  nginx.conf  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
config/: esbuild.config.js  esbuild.config.ts  performance.config.ts  postcss.config.ts  tailwind.config.ts  vitest.config.js  vitest.config.ts
docker/: Dockerfile  Dockerfile.test  build-docker.sh  docker-compose.yml
docs/: ALPINE_TESTING_GUIDE.md  CLAUDE.md  DOCKER.md  RUST_SERVER_GUIDE.md  TYPESCRIPT_MIGRATION.md  TYPE_SYSTEM.md
scripts/: build-production.sh  build.sh  build.ts  dev-both.sh  dev-full.sh  dev.sh  watch-types.sh
src/: lib.rs  main.rs
src/dashboard/: handlers.rs  hot_reload.rs  mod.rs  server.rs  types.rs  websocket.rs
src/server/: echo_test.rs  error.rs  mcp_router.rs  mod.rs
src/shared/: config.rs  mod.rs  state.rs  types.rs
src/tools/: file_search.rs  mod.rs  schemas.rs
templates/: dashboard.html  index.html  layout.html
tests/: basic_integration.rs  dashboard_tests.rs  docker_integration_tests.rs  docker_integration_tests_optimized.rs  hot_reload_tests.rs  integration_tests.rs  production_tests.rs  run-tests.js  setup.js  setup.ts  typescript_compilation_tests.rs  websocket_origin_tests.rs
(+72 files in other folders)
